fix(tocco-theme): prevent scrollbar during toastr animation
- fix by commit 9a751e8fc053a0ecc3efe2002dca005eafb13126 leads to the problem that content benath .top-left, .top-right, .top-center, .bottom-left, .bottom-right, .bottom-center is not accessible for actions
- the new solutions adds the safarea only for the duration of the animation and only for the animation which are affeted by the problem
- with this solution is a sideeffect possible, if two boxes bounce in or out at the same time subsequent boxes jump caused by the sudden change of margin

--- a/packages/tocco-theme/src/ToccoTheme/vendor-extension/toastr/third-party-integration.scss
+++ b/packages/tocco-theme/src/ToccoTheme/vendor-extension/toastr/third-party-integration.scss
@@ -35,7 +35,6 @@
   .bottom-center {
     max-height: 100%; // usability: ensure accessibility of all notification boxes
     overflow-y: auto; // todo: enhance usability - it is not obvious that content is scrollable
-    padding-bottom: 25px;  // reset: react-redux-toastr (index.scss)
   }
 
   .toastr {
@@ -43,6 +42,11 @@
     opacity: 1;  // reset: react-redux-toastr (index.scss)
     &:hover:not( .rrt-message ) {
       box-shadow: 2px 2px 10px rgba(0, 0, 0, .4);  // reset: react-redux-toastr (index.scss)
+    }
+
+    &.animated.bounceInDown,
+    &.animated.bounceOutUp {
+      margin-bottom: 30px;
     }
 
     .rrt-holder {
